first draft of 4.6 saving viz done

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -5,6 +5,13 @@ This chapter will introduce concepts and tools relating to data visualization be
 We will focus on guiding principles for effective data visualization and explaining visualizations independent of any particular tool or programming language.
 In the process, we will cover some specifics of creating visualizations (scatter plots, bar charts, line graphs, and histograms) for data using R.
 
+There are two external references that contain a wealth of additional information on the topic of data visualization:
+see the [Fundamentals of Data Visualization](https://serialmentor.com/dataviz/) by  Professor Claus Wilke for more details on general principles of effective visualizations,
+and see Grolemund & Wickham's [R for Data Science](https://r4ds.had.co.nz/) chapter on [creating visualizations using `ggplot2`](https://r4ds.had.co.nz/data-visualisation.html)
+for a deeper introduction into the syntax and grammar of plotting with `ggplot2` specifically.
+
+
+
 ## Chapter learning objectives
 
 **REVISIT THESE WHEN DONE CHAPTER**
@@ -21,26 +28,23 @@ In the process, we will cover some specifics of creating visualizations (scatter
 * Given a visualization and a description of a claim, evaluate its effectiveness and suggest ways to improve the visualization to better support the claim
 * List the rules of thumb for effective visualizations 
 
-## Making effective visualizations
+## Choosing the visualization
+#### *Tell a story, make a claim, and justify it* {-#my-section}
+
+## Designing the visualization
+#### *Maximize the signal-to-noise ratio* {-#my-section}
 
 Just being able to make vizualizations in R with `ggplot2` (or any other tool for that matter) doesn't mean that your vizualization is effective at communicating 
 to others what you are trying to communicate. There is a large body of research behind what makes effective visualizations and it seems it is really dependent on what 
-humans can see and process. Claus Wilke, a Professor of Integrative Biology at The University of Texas at Austin, has written down some (digestible) guiding principles for 
-making effectice visualizations based on this literature in his new book, [Fundamentals of Data Visualization](https://serialmentor.com/dataviz/). Below we give a high level 
-listing of these, but we strongly recommend you read and/or refer [Part II: Principles of figure design](https://serialmentor.com/dataviz/proportional-ink.html) when creating 
-your visualizations in this class (or any other time you are doing this task!).
-
-There are two external references that contain a wealth of additional information on the topic of data visualization:
-see the [Fundamentals of Data Visualization](https://serialmentor.com/dataviz/) by  Professor Claus Wilke for more details on general principles of effective visualizations,
-and see Grolemund & Wickham's [R for Data Science](https://r4ds.had.co.nz/) chapter on [creating visualizations using `ggplot2`](https://r4ds.had.co.nz/data-visualisation.html)
-for a deeper introduction into the syntax and grammar of plotting with `ggplot2` specifically.
+humans can see and process. 
 
 
-### Choosing the visualization
-#### *Tell a story, make a claim, and justify it* {-#my-section}
+**1. Make it readable**
 
-### Designing the visualization
-#### *Maximize the signal-to-noise ratio* {-#my-section}
+**1. Don't ever use tables**
+
+
+
 
 make it readable
 1. Only make the plot area (where the dots, lines, bars are) as big as needed (simple plots can, and should be quite small)
@@ -57,29 +61,72 @@ avoid tables
 
 use good colour palette
 
-### Explaining the visualization
+## Explaining the visualization
 #### *Tell the story* {-#my-section}
 
-### Saving the visualization
-#### *Pay attention to output format* {-#my-section}
+## Saving the visualization
+#### *Choose the right output format for your needs* {-#my-section}
 
 Just as there are many ways to store datasets, there are many ways to store visualizations and images.
 Which one you choose can depend on a number of factors, such as file size/type limitations 
 (e.g., if you are submitting your visualization as part of a conference paper or to a poster printing shop)
-and where it will be displayed (e.g., online, in a paper, on a billboard, in talk slides).
+and where it will be displayed (e.g., online, in a paper, on a poster, on a billboard, in talk slides).
 Generally speaking, images come in two flavours: *bitmap* (or *raster*) formats and *vector* (or *scalable graphics*) formats.
 
 
-- **Bitmap / Raster**: image is represented as a 2-D grid of square pixels, each with their own colour. Raster images are often *compressed* before storing so they take up less space. A compressed format is *lossy* if the image cannot be perfectly recreated when loading and displaying, with the hope that the change is not noticeable. *Lossless* formats, on the other hand, allow a perfect display of the original image.
-    - *common file types:* 
-        - JPEG (`.jpg` or `.jpeg`): a lossy type, usually used for photographs 
-        - PNG (`.png`): a lossless type, usually used for plots / line drawings
-    - *software:* Adobe Photoshop, GIMP, Microsoft Paint, etc
-- **Vector / Scalable Graphics**: image is represented as a collection of mathematical objects (lines, planes, shapes, curves). When the computer displays the image, it redraws all of the elements using their mathematical formulas.
-    - *common file types:* PDF (`.pdf`) and SVG (`.svg`), both for general purpose use
-    - *software:* Adobe Illustrator, Inkscape, etc
+**Bitmap / Raster** images are represented as a 2-D grid of square pixels, each with their own colour. Raster images are often *compressed* before storing so they take up less space. A compressed format is *lossy* if the image cannot be perfectly recreated when loading and displaying, with the hope that the change is not noticeable. *Lossless* formats, on the other hand, allow a perfect display of the original image.
+
+- *Common file types:* 
+    - [JPEG](https://en.wikipedia.org/wiki/JPEG) (`.jpg`, `.jpeg`): lossy, usually used for photographs 
+    - [PNG](https://en.wikipedia.org/wiki/Portable_Network_Graphics) (`.png`): lossless, usually used for plots / line drawings
+    - [BMP](https://en.wikipedia.org/wiki/BMP_file_format) (`.bmp`): lossless, raw image data, no compression (rarely used)
+    - [TIFF](https://en.wikipedia.org/wiki/TIFF) (`.tif`, `.tiff`): typically lossless, no compression, used mostly in graphic arts, publishing
+- *Free Editing software:* [GIMP](https://www.gimp.org/), [JS Paint](https://jspaint.app)
+
+**Vector / Scalable Graphics** images are represented as a collection of mathematical objects (lines, surfaces, shapes, curves). When the computer displays the image, it redraws all of the elements using their mathematical formulas.
+
+- *Common file types:* [PDF](https://en.wikipedia.org/wiki/PDF) (`.pdf`) and [SVG](https://en.wikipedia.org/wiki/Scalable_Vector_Graphics) (`.svg`), both for general purpose use
+- *Free Editing software:* [Inkscape](https://inkscape.org/), [Boxy SVG](https://boxy-svg.com/)
 
 Raster and vector images have opposing advantages and disadvantages. A raster image of a fixed width / height takes the same amount of space and time to load regardless of 
-what the image shows (caveat: the compression algorithms may be better / faster for certain images). A vector image takes space and time to load 
+what the image shows (caveat: the compression algorithms may shrink the image more or run faster for certain images). A vector image takes space and time to load 
 corresponding to how complex the image is, since the computer has to draw all the elements each time it is displayed. On the other hand, you can zoom into / scale up 
 vector graphics as much as you like without the image looking bad, while raster images eventually start to look "pixellated." 
+
+Let's investigate how different image file formats behave with a scatter plot of the
+[Old Faithful dataset](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat), which happens to be available in base R under the name `faithful`:
+
+```{r 03-plot-line, collapse=TRUE}
+library(tidyverse)
+library(svglite) #we need this to save SVG files
+faithful_plot <- ggplot(data=faithful, aes(x=waiting, y=eruptions))+
+  geom_point()
+
+print(faithful_plot)
+
+ggsave('faithful_plot.png', faithful_plot)
+ggsave('faithful_plot.jpg', faithful_plot)
+ggsave('faithful_plot.bmp', faithful_plot)
+ggsave('faithful_plot.tiff', faithful_plot)
+ggsave('faithful_plot.svg', faithful_plot)
+
+print(paste("PNG filesize: ", file.info('faithful_plot.png')['size']/1000000, "MB"))
+print(paste("JPG filesize: ", file.info('faithful_plot.jpg')['size']/1000000, "MB"))
+print(paste("BMP filesize: ", file.info('faithful_plot.bmp')['size']/1000000, "MB"))
+print(paste("TIFF filesize: ", file.info('faithful_plot.tiff')['size']/1000000, "MB"))
+print(paste("SVG filesize: ", file.info('faithful_plot.svg')['size']/1000000, "MB"))
+```
+Wow, that's quite a difference! Notice that for such a simple plot with few graphical elements (points), the vector graphics format (SVG) is over 100 
+times smaller than the uncompressed raster images (BMP, TIFF). Also note that the JPG format is twice as large as the PNG format, since the JPG
+compression algorithm is designed for natural images (not plots). Below, we also show what the images look like when we zoom in to a rectangle with only 3 data points.
+You can see why vector graphics formats are so useful: because they're just based on mathematical formulas, vector graphics can be scaled up to arbitrary sizes.
+This makes them great for presentation media of all sizes, from papers to posters to billboards.
+
+<figure>
+<center>
+<img src="img/faithful_zoom.png" style="height: 250px"/>
+<img src="img/faithful_zoom.svg" style="height: 250px"/>
+<figcaption> Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats.</figcaption>
+</center>
+</figure>
+
