working on 03 viz designing

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -31,35 +31,38 @@ for a deeper introduction into the syntax and grammar of plotting with `ggplot2`
 ## Choosing the visualization
 #### *Tell a story, make a claim, and justify it* {-#my-section}
 
+- Do not use pie charts (its harder for us to compare the sizes of the slices of a pie, than it is to compare sizes of bars).
+- Do not use 3D (we don't see in 3D, not even as we're walking around in space)
+- Don't ever use tables *humans are
+way better at processing and understanding images than text and math*.
+
+
 ## Designing the visualization
 #### *Maximize the signal-to-noise ratio* {-#my-section}
 
 Just being able to make vizualizations in R with `ggplot2` (or any other tool for that matter) doesn't mean that your vizualization is effective at communicating 
-to others what you are trying to communicate. There is a large body of research behind what makes effective visualizations and it seems it is really dependent on what 
-humans can see and process. 
+to others what you are trying to communicate. There is a large body of research behind what makes effective visualizations,  
+
+**Maximize signal**
+
+- make sure your information conveys your point
+- Use legends and labels so that your visualization is understandable without reading the surrounding text
+- Ensure the text, symbols on your visualization is big enough to be easily read
+- Don't adjust the axes to zoom in on small differences (if the difference is small, show that its small!)
+- use good colour palette
+
+**Minimize noise**
+
+- Use colors sparingly (too many different colors can distract and even create false patterns)
+- Be wary of overplotting (if your plot has too many dots or lines and it starts to look like a mess, then you need to do something different)
+- Only make the plot area (where the dots, lines, bars are) as big as needed (simple plots can, and should be quite small)
+- Show the data (don't hide the shape/distribution of the data behind a bar)
+
+[colour blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/)
+
+[colorbrewer.org](https://colorbrewer.org)
 
 
-**1. Make it readable**
-
-**1. Don't ever use tables**
-
-
-
-
-make it readable
-1. Only make the plot area (where the dots, lines, bars are) as big as needed (simple plots can, and should be quite small)
-2. Don't adjust the axes to zoom in on small differences (if the difference is small, show that its small!)
-3. Show the data (don't hide the shape/distribution of the data behind a bar)
-4. Be wary of overplotting (if your plot has too many dots or lines and it starts to look like a mess, then you need to do something different)
-5. Use colors sparingly (too many different colors can distract and even create false patterns)
-6. Use legends and labels so that your visualization is understandable without reading the surrounding text
-7. Ensure the text on your visualization is big enough to be easily read
-8. Do not use pie charts (its harder for us to compare the sizes of the slices of a pie, than it is to compare sizes of bars).
-9. Do not use 3D (we don't see in 3D, not even as we're walking around in space)
-
-avoid tables
-
-use good colour palette
 
 ## Explaining the visualization
 #### *Tell the story* {-#my-section}
