adding basic viz

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -75,8 +75,10 @@ print(co2_scatter)
 ```
 
 Certainly the visualization shows a clear (and quite depressing) upward trend in the atmospheric concentration of CO2 over time.
-This certainly answers the first part of our question; but that appears to be the only conclusion one can make from this type of visualization. 
-However, since time is an ordered quantity, we can try using a line plot instead using the `geom_line` function:
+This plot answers the first part of our question in the affirmative, but that appears to be the only conclusion one can make from the scatter visualization. 
+However, since time is an ordered quantity, we can try using a line plot instead using the `geom_line` function. Line plots require
+that the data are listed in order, and connect the sequence of `x` and `y` coordinates with line segments. Let's again try this with just 
+the default arguments: 
 
 ```{r 03-data-co2-line}
 co2_line <- ggplot(co2_df, aes(x = date, y = concentration)) + geom_line() 
@@ -90,14 +92,14 @@ Given the visualization as it is now, it is still hard to tell how fast and how 
 be a better choice for answering the question than the scatter plot was. The comparison between these two visualizations illustrates a common issue with 
 scatter plots: often the points are shown too close together or even on top of one another, muddling information that would otherwise be clear (*overplotting*).
 
-### The Old Faithful eruption / wait time dataset
+### The Old Faithful eruption / waiting time dataset
 This dataset contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes):
 ```{r 03-data-faithful}
 # old faithful eruption time / wait time data
 head(faithful)
 ```
 
-**Question:** Is there a relationship between the waiting time before an eruption to the duration of the eruption? More precisely, would it be possible to use the current time since
+**Question:** Is there a relationship between the waiting time before an eruption to the duration of the eruption? Also, would it be possible to use the current time since
 the last eruption to predict the duration of the next eruption? 
 
 Here again we are investigating the relationship between two quantitative variables (waiting time and eruption time). A scatter plot sounds like a good place to start:
@@ -123,11 +125,30 @@ colnames(islands_df) <- c('landmass', 'size')
 head(islands_df)
 ```
 ### The Michelson speed of light dataset
-This  dataset contains measurements of the speed of light (in kilometers per second with 299,000 subtracted):
+This dataset contains measurements of the speed of light (in kilometers per second with 299,000 subtracted) for 5 experiments, each with 20 runs:
 ```{r 03-data-morley}
 # michelson morley experimental data
 head(morley)
 ```
+**Question:** How accurate are all the experiments?
+
+```{r 03-data-morley-hist}
+morley_hist <- ggplot(morley, aes(x = Speed)) + geom_histogram() 
+```
+
+```{r 03-data-morley-hist-2}
+morley_hist2 <- ggplot(morley, aes(x = Speed, fill= Expt)) + geom_histogram(position='identity', alpha=0.2)  + scale_fill_manual(values=c("red", "blue", "green", "yellow", "gray70"))
+ggplot(morley, aes(x=Speed, color=factor(Expt), fill=factor(Expt))) + geom_histogram(alpha=0.5, position='identity')
+
+```
+
+```{r 03-data-morley-hist-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
+print(morley_hist)
+print(morley_hist2)
+```
+
+
+
 
 ### The tooth growth dataset
 This dataset contains measurements of the length of odontoblasts (cells responsible for tooth growth) in 60 guinea pigs given different dose levels of vitamin C (in milligrams per day) in different forms (ascorbic acid or orange juice):
