removed tooth data 03 viz

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -45,6 +45,14 @@ the right visualization for your data. There are [many different kinds of plotti
 - **scatter plots** visualize the relationship between two quantitative variables, and can also be used to visualize the distribution of data on two axes
 - **bar plots** visualize comparisons of amounts
 
+All types of visualization have their (mis)uses, but there are three kinds that are usually hard to understand or are easily replaced with an oft-better alternative.
+In particular you should avoid **pie charts**; it is usually better to use bars, as it is easier to compare bar heights than pie slice sizes.
+You should also not use **3-D visualizations**, as they are typically hard to understand when converted to a static 2-D image format. Finally,
+do not use tables to make numerical comparisons; humans are much better at quickly processing visual information than text and math. Bar plots are 
+again typically a better alternative.
+
+
+
 The rest of the section will cover examples of how to choose a visualization given a dataset and a question that you want to answer, and then how to create
 the visualization in R using `ggplot2`.
 
@@ -124,6 +132,17 @@ islands_df <- enframe(islands)
 colnames(islands_df) <- c('landmass', 'size')
 head(islands_df)
 ```
+
+```{r 03-data-islands-bar}
+islands_bar <- ggplot(islands_df, aes(x = landmass, y=size)) + geom_bar(stat='identity')
+```
+
+```{r 03-data-islands-bar-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
+print(islands_bar)
+```
+
+
+
 ### The Michelson speed of light dataset
 This dataset contains measurements of the speed of light (in kilometers per second with 299,000 subtracted) for 5 experiments, each with 20 runs:
 ```{r 03-data-morley}
@@ -137,8 +156,7 @@ morley_hist <- ggplot(morley, aes(x = Speed)) + geom_histogram()
 ```
 
 ```{r 03-data-morley-hist-2}
-morley_hist2 <- ggplot(morley, aes(x = Speed, fill= Expt)) + geom_histogram(position='identity', alpha=0.2)  + scale_fill_manual(values=c("red", "blue", "green", "yellow", "gray70"))
-ggplot(morley, aes(x=Speed, color=factor(Expt), fill=factor(Expt))) + geom_histogram(alpha=0.5, position='identity')
+morley_hist2 <- ggplot(morley, aes(x=Speed, color=factor(Expt), fill=factor(Expt))) + geom_histogram(alpha=0.5, position='identity')
 
 ```
 
@@ -148,19 +166,6 @@ print(morley_hist2)
 ```
 
 
-
-
-### The tooth growth dataset
-This dataset contains measurements of the length of odontoblasts (cells responsible for tooth growth) in 60 guinea pigs given different dose levels of vitamin C (in milligrams per day) in different forms (ascorbic acid or orange juice):
-```{r 03-data-tooth}
-# effect of vitamin C on guinea pig tooth growth
-head(ToothGrowth)
-```
-All types of visualization have their (mis)uses, but there are three kinds that are usually hard to understand or are easily replaced with an oft-better alternative.
-In particular you should avoid **pie charts**; it is usually better to use bars, as it is easier to compare bar heights than pie slice sizes.
-You should also not use **3-D visualizations**, as they are typically hard to understand when converted to a static 2-D image format. Finally,
-do not use tables to make numerical comparisons; humans are much better at quickly processing visual information than text and math. Bar plots are 
-again typically a better alternative.
 
 ask a question try to use different plots to answer the question choose the 
 
