--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -57,20 +57,20 @@ The rest of the section will cover examples of how to choose a visualization giv
 the visualization in R using `ggplot2`.
 
 ### The Mauna Loa CO2 dataset 
- This dataset contains the atmospheric concentration of carbon dioxide (CO2, in parts per million) at the Mauna Loa research station in Hawaii from the years 1959-1997:
+ This dataset contains the atmospheric concentration of carbon dioxide (CO2, in parts per million) at the Mauna Loa research station in Hawaii 
+from the years 1959-1997. **Question:** Does the concentration of atmospheric CO2 change over time, and are there any interesting patterns to note?
 ```{r 03-data-co2}
 # mauna loa carbon dioxide data 
 # (with some light wrangling to make it a dataframe with informative column names)
 co2_df <- data.frame(concentration = as.matrix(co2), date = time(co2))
 head(co2_df)
 ```
-**Question:** Does the concentration of atmospheric CO2 change over time, and are there any interesting patterns to note?
 
-Since we are investigating a relationship between two variables (CO2 concentration and time), it may be a good idea to use a scatter plot. 
-Scatter plots show the data as individual points with `x` (horizonal axis) and `y` (vertical axis) coordinates. Here, we will set the `x` coordinate to time,
-and the `y` coordinate to concentration. 
+Since we are investigating a relationship between two variables (CO2 concentration and date), it may be a good idea to use a scatter plot. 
+Scatter plots show the data as individual points with `x` (horizonal axis) and `y` (vertical axis) coordinates. Here, we will use the date
+as the `x` coordinate and CO2 concentration as the `y` coordinate.
 
-In `ggplot2`, we create the plot with the function `ggplot`. The first argument is the dataframe we are working with (here `co2_df`), 
+When using the `ggplot2` library, we create the plot object with the `ggplot` function. The first argument is the dataframe we are working with (here `co2_df`), 
 and the second (here `aes(x = date, y = concentration)`) tells the plot what to put on the `x` axis and what to put on the `y` axis.
 Finally, we tell the plotting code to display the information as a scatter using the `geom_point` function. There are many other possible 
 arguments to pass to the `ggplot2` functions, but for the purposes of quickly testing things out to see what they look like, we can just go with the default settings:
@@ -96,24 +96,24 @@ print(co2_line)
 ```
 
 Aha! There *is* another interesting phenomenon in the data: in addition to increasing over time, the concentration seems to oscillate as well. 
-Given the visualization as it is now, it is still hard to tell how fast and how large in amplitude the oscillation is, but nevertheless, the line seems to
+Given the visualization as it is now, it is still hard to tell how fast the oscillation is, but nevertheless, the line seems to
 be a better choice for answering the question than the scatter plot was. The comparison between these two visualizations illustrates a common issue with 
 scatter plots: often the points are shown too close together or even on top of one another, muddling information that would otherwise be clear (*overplotting*).
 
 ### The Old Faithful eruption / waiting time dataset
-This dataset contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes):
+This dataset contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes). **Question:** Is there a 
+relationship between the waiting time before an eruption to the duration of the eruption? Also, would it be possible to use the current time since
+the last eruption to predict the duration of the next eruption? 
+
 ```{r 03-data-faithful}
 # old faithful eruption time / wait time data
 head(faithful)
 ```
 
-**Question:** Is there a relationship between the waiting time before an eruption to the duration of the eruption? Also, would it be possible to use the current time since
-the last eruption to predict the duration of the next eruption? 
-
 Here again we are investigating the relationship between two quantitative variables (waiting time and eruption time). A scatter plot sounds like a good place to start:
 
 ```{r 03-data-faithful-scatter}
-faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) + geom_point() 
+faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) + geom_point()  + geom_density_2d()
 ```
 ```{r 03-data-faithful-scatter-print, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
 print(faithful_scatter)
@@ -222,7 +222,9 @@ Generally speaking, images come in two flavours: *bitmap* (or *raster*) formats 
 
 **Vector / Scalable Graphics** images are represented as a collection of mathematical objects (lines, surfaces, shapes, curves). When the computer displays the image, it redraws all of the elements using their mathematical formulas.
 
-- *Common file types:* [SVG](https://en.wikipedia.org/wiki/Scalable_Vector_Graphics) (`.svg`) and [EPS](https://en.wikipedia.org/wiki/Encapsulated_PostScript) (`.eps`), both for general purpose use (although SVG is much more common these days) 
+- *Common file types:* 
+    - [SVG](https://en.wikipedia.org/wiki/Scalable_Vector_Graphics) (`.svg`): general-purpose use 
+    - [EPS](https://en.wikipedia.org/wiki/Encapsulated_PostScript) (`.eps`), general-purpose use (rarely used)
 - *Free Editing software:* [Inkscape](https://inkscape.org/), [Boxy SVG](https://boxy-svg.com/)
 
 Raster and vector images have opposing advantages and disadvantages. A raster image of a fixed width / height takes the same amount of space and time to load regardless of 
